# trainer

./: pyproject.toml
conf/: config.yaml
conf/ray_train/: single_gpu.yaml
conf/trainer/: base.yaml  flux2_klein_ti2i.yaml
conf/trainer/checkpointer/: dcp.yaml  torch_save.yaml
conf/trainer/logger/: tb.yaml
src/trainer/: main.py
src/trainer/components/: __init__.py
src/trainer/components/checkpointer/: __init__.py  base.py  dcp.py  torch_save.py
src/trainer/components/logger/: __init__.py  base.py  tb.py
src/trainer/components/scheduler/: __init__.py  constant.py
src/trainer/config/: __init__.py  parallel.py  ray_train.py
src/trainer/dataset/: __init__.py  condition_image_caption_latents.py  image_caption_latents.py  utils.py
src/trainer/distributed/: __init__.py  collectives.py  parallel_dims.py
src/trainer/models/: flux2_klein_t2i.py  flux2_klein_ti2i.py
src/trainer/train/: __init__.py  config.py  train_func.py  trainer.py
src/trainer/utils/: __init__.py  amp.py  determinism.py  grad.py
tests/: precompute_flux2_uncond_text_embeddings.py
